@@ -1,5 +1,8 @@
 24 July 2008
 
+* If keypad mode and cursor mode are on, switch the arrow keys from \033[A to
+  \033OA. Not sure what else keypad mode is meant to do. Something with the
+  keypad keys I think, but screen doesn't seem to do anything...
 * Support the numeric keypad. This is really confusing: parts of it have termcap
   entries and parts do not. I'm not sure I've got it right but this seems to
   work.
@@ -620,4 +623,4 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.152 2008-07-23 23:46:51 nicm Exp $
+$Id: CHANGES,v 1.153 2008-07-24 00:03:15 nicm Exp $
